fix - Fixing inconsistencies on mobile and tablet devices

--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -178,3 +178,9 @@
     display: none;
   }
 }
+
+@media only screen and (max-width: 26.25em) {
+  .nav-list {
+    top: 105px;
+  }
+}
