--- a/src/components/logo/style.css
+++ b/src/components/logo/style.css
@@ -47,3 +47,10 @@
   opacity: 0.8;
   border: 2px solid var(--white);
 }
+
+@media only screen and (max-width: 26.25em) {
+  .logo__name {
+    padding: 0.4em 1.5em;
+    font-size: 2rem;
+  }
+}
