--- a/src/components/testimonialCard/style.css
+++ b/src/components/testimonialCard/style.css
@@ -106,7 +106,7 @@
   }
 
   .testimonial-card__paragraph {
-    padding: 2.4rem;
+    /* padding: 3.4rem; */
     padding-bottom: 2rem;
   }
 }
